ecmascript/parser/tests/test262-error-references/fail/75412422951a6362.js.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/test262-parser/fail/75412422951a6362.js:1:1
  |
1 | import { class } from 'foo'
  | ^^^^^^

